--- a/translations/spanish.txt
+++ b/translations/spanish.txt
@@ -1,3 +1,3 @@
-greeting:Hola, Mundo!
-farewell:Adiós, Mundo!
-question:¿Cómo estás?
+Hello, World!:Hola, Mundo!
+Goodbye, World!:Adiós, Mundo!
+How are you?:¿Cómo estás?
